--- a/project/12-monitor-dependencies/index.html
+++ b/project/12-monitor-dependencies/index.html
@@ -13,6 +13,9 @@
             };
 
             moduleArgs.preRun = [
+                //
+                // 以下の二つはファイル名が異なるだけ
+                //
                 () => {
                     moduleArgs.addRunDependency('data1');
 
