--- a/project/13-envvar/index.html
+++ b/project/13-envvar/index.html
@@ -16,7 +16,7 @@
                 ]
             };
 
-            await Module(moduleArgs).then(emsModule =>
+            Module(moduleArgs).then(emsModule =>
             {
                 v = emsModule._increment(v);
                 console.log(`return=${v}`);
